<?xml version="1.0" encoding="utf-8"?>
<ScrollView 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
 		android:layout_width="fill_parent"
    	android:layout_height="wrap_content">
	<RelativeLayout 
	    android:background="@color/anti_color_white" 
	    android:layout_width="fill_parent" 
	    android:layout_height="fill_parent">   
	    <RelativeLayout android:id="@+id/layout_setting_enable_blocker" 
	        android:background="@drawable/list_selector" 
	        android:layout_width="fill_parent" 
	        android:layout_height="@dimen/anti_margin_52dip" >
	            <TextView android:textSize="@dimen/anti_textsize_18sp" 
		            android:textColor="@color/anti_color_dark_grey" 
		            android:layout_width="wrap_content" 
		            android:layout_height="wrap_content" 
		            android:layout_marginLeft="@dimen/anti_margin_7dip" 
		            android:text="@string/anti_enable_blocker" 
		            android:layout_alignParentLeft="true" 
		            android:layout_centerVertical="true" />
	            <CheckBox android:id="@+id/checkbox_enable_blocker" 
		            android:layout_width="wrap_content" 
		            android:layout_height="wrap_content" 
		            android:layout_marginRight="@dimen/anti_margin_8dip" 
		            android:button="@drawable/checkbox_checked_style" 
		            android:layout_alignParentRight="true" 
		            android:layout_centerVertical="true" />
	    </RelativeLayout>
	    <RadioGroup android:id="@+id/radiogroup_settings_block_way" 
	        android:layout_below="@id/layout_setting_enable_blocker"
	        android:layout_marginTop="@dimen/anti_margin_7dip" 
	        android:orientation="vertical" 
	        android:background="@drawable/radio_group_bg" 
	        android:layout_width="fill_parent" 
	        android:layout_height="wrap_content" 
	        android:layout_marginLeft="@dimen/anti_margin_9dip" 
	        android:layout_marginRight="@dimen/anti_margin_9dip">
	        <RadioButton android:textSize="@dimen/anti_textsize_16sp" 
	            android:textColor="@drawable/anti_settings_radio_text_color" 
	            android:id="@+id/radio_block_black_list" 
	            android:layout_width="fill_parent" 
	            android:layout_height="@dimen/anti_margin_52dip" 
	            android:layout_marginLeft="@dimen/anti_margin_15dip" 
	            android:button="@drawable/radiobutton_state_style"
	            android:text="@string/anti_block_black_list" />
	        <View android:background="@color/anti_color_list_divider" 
	            android:layout_width="fill_parent" 
	            android:layout_height="@dimen/anti_divider_height" />
	        <RadioButton android:textSize="@dimen/anti_textsize_16sp" 
	            android:textColor="@drawable/anti_settings_radio_text_color" 
	            android:id="@+id/radio_accept_white_list" 
	            android:layout_width="fill_parent" 
	            android:layout_height="@dimen/anti_margin_52dip" 
	            android:layout_marginLeft="@dimen/anti_margin_15dip" 
	            android:button="@drawable/radiobutton_state_style" 
	            android:text="@string/anti_accept_white_list" />
	        <View android:background="@color/anti_color_list_divider" 
	            android:layout_width="fill_parent" 
	            android:layout_height="@dimen/anti_divider_height" />
	        <RadioButton android:textSize="@dimen/anti_textsize_16sp" 
	            android:textColor="@drawable/anti_settings_radio_text_color" 
	            android:id="@+id/radio_accept_white_list_contacts" 
	            android:layout_width="fill_parent" 
	            android:layout_height="@dimen/anti_margin_52dip" 
	            android:layout_marginLeft="@dimen/anti_margin_15dip" 
	            android:button="@drawable/radiobutton_state_style" 
	            android:text="@string/anti_accept_white_list_contacts" />
	    </RadioGroup> 
	    <RadioGroup android:id="@+id/radiogroup_settings_block_tone" 
	        android:layout_below="@id/radiogroup_settings_block_way"
	        android:layout_marginTop="@dimen/anti_margin_7dip" 
	        android:orientation="vertical" 
	        android:background="@drawable/radio_group_bg" 
	        android:layout_width="fill_parent" 
	        android:layout_height="wrap_content" 
	        android:layout_marginLeft="@dimen/anti_margin_9dip" 
	        android:layout_marginRight="@dimen/anti_margin_9dip">
	        <RadioButton android:id="@+id/radio_tone_busy"
	            android:textSize="@dimen/anti_textsize_16sp" 
	            android:textColor="@drawable/anti_settings_radio_text_color" 
	            android:layout_width="fill_parent" 
	            android:layout_height="@dimen/anti_margin_52dip" 
	            android:layout_marginLeft="@dimen/anti_margin_15dip" 
	            android:button="@drawable/radiobutton_state_style"
	            android:text="@string/anti_tone_busy" />
	        <View android:background="@color/anti_color_list_divider" 
	            android:layout_width="fill_parent" 
	            android:layout_height="@dimen/anti_divider_height" />
	        <RadioButton android:id="@+id/radio_tone_empty"
	            android:textSize="@dimen/anti_textsize_16sp" 
	            android:textColor="@drawable/anti_settings_radio_text_color" 
	            android:layout_width="fill_parent" 
	            android:layout_height="@dimen/anti_margin_52dip" 
	            android:layout_marginLeft="@dimen/anti_margin_15dip" 
	            android:button="@drawable/radiobutton_state_style" 
	            android:text="@string/anti_tone_empty_number" />
	        <View android:background="@color/anti_color_list_divider" 
	            android:layout_width="fill_parent" 
	            android:layout_height="@dimen/anti_divider_height" />
	        <RadioButton android:id="@+id/radio_tone_shut_down"
	            android:textSize="@dimen/anti_textsize_16sp" 
	            android:textColor="@drawable/anti_settings_radio_text_color" 
	            android:layout_width="fill_parent" 
	            android:layout_height="@dimen/anti_margin_52dip" 
	            android:layout_marginLeft="@dimen/anti_margin_15dip" 
	            android:button="@drawable/radiobutton_state_style" 
	            android:text="@string/anti_tone_shut_down" />
	        <View android:background="@color/anti_color_list_divider" 
	            android:layout_width="fill_parent" 
	            android:layout_height="@dimen/anti_divider_height" />
	        <RadioButton android:id="@+id/radio_tone_stop"
	            android:textSize="@dimen/anti_textsize_16sp" 
	            android:textColor="@drawable/anti_settings_radio_text_color" 
	            android:layout_width="fill_parent" 
	            android:layout_height="@dimen/anti_margin_52dip" 
	            android:layout_marginLeft="@dimen/anti_margin_15dip" 
	            android:button="@drawable/radiobutton_state_style" 
	            android:text="@string/anti_tone_phone_down" />
	    </RadioGroup>	    
	</RelativeLayout> 
</ScrollView>