<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@color/anti_color_white" 
	android:layout_width="fill_parent" 
	android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:id="@+id/layout_edit_info"
        android:orientation="vertical" 
    	android:layout_width="fill_parent" 
    	android:layout_height="wrap_content" >
        <TextView android:id="@+id/text_input_tip"
            android:textSize="@dimen/anti_textsize_18sp" 
            android:textColor="@color/anti_color_dark_grey" 
            android:layout_width="fill_parent" 
            android:layout_height="wrap_content" 
            android:layout_marginLeft="@dimen/anti_margin_13dip" 
            android:layout_marginTop="@dimen/anti_margin_22dip" 
            android:text="@string/anti_input_msg" />

        <!--  <EditText
            android:id="@+id/edit_name"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/anti_margin_40dip"
            android:layout_marginLeft="@dimen/anti_margin_13dip"
            android:layout_marginRight="@dimen/anti_margin_13dip"
            android:layout_marginTop="@dimen/anti_margin_8dip"
            android:background="@drawable/pic_edittext_bg"
            android:gravity="center_vertical"
            android:hint="@string/anti_hint_name"
            android:imeOptions="actionNext"
            android:inputType="textPersonName"
            android:maxLength="40"
            android:paddingLeft="@dimen/anti_margin_10dip"
            android:textColor="@color/anti_color_edit_text"
            android:textColorHint="@color/anti_color_hint"
            android:textSize="@dimen/anti_textsize_14sp" />
         -->

        <EditText android:id="@+id/edit_number"
            android:textSize="@dimen/anti_textsize_18sp" 
        	android:textColor="@color/anti_color_black" 
        	android:textColorHint="@color/anti_color_hint" 
        	android:gravity="center_vertical" 
        	android:background="@drawable/pic_edittext_bg" 
        	android:paddingLeft="@dimen/anti_margin_10dip" 
        	android:layout_width="fill_parent" 
        	android:layout_height="@dimen/anti_margin_40dip"
        	android:layout_marginLeft="@dimen/anti_margin_13dip" 
        	android:layout_marginTop="@dimen/anti_margin_19dip" 
        	android:layout_marginRight="@dimen/anti_margin_13dip" 
        	android:hint="@string/anti_hint_phone" 
        	android:maxLength="25" 
        	android:digits="+0123456789" 
        	android:inputType="phone" 
        	android:imeOptions="actionDone" />
    </LinearLayout>
    <LinearLayout android:orientation="horizontal"
     	android:layout_width="fill_parent" 
     	android:layout_height="wrap_content" 
     	android:baselineAligned="false" 
     	android:layout_below="@id/edit_number" 
     	android:layout_alignParentBottom="true">
        <Button android:id="@+id/btn_save" 
            android:layout_width="fill_parent"
            android:text="@string/anti_save"  
            android:textColor="@drawable/button_text"
            style="@style/style_button"  
            android:layout_marginRight="@dimen/anti_margin_5dip"
            android:layout_weight="1.0"/>
        <Button android:id="@+id/btn_cancel" 
            android:layout_width="fill_parent"  
            android:text="@string/anti_cancel"  
            style="@style/style_button" 
            android:layout_marginLeft="@dimen/anti_margin_5dip"
            android:layout_weight="1.0"/>
    </LinearLayout>
</RelativeLayout>
